# FastWAM-deploy

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-agx.txt
docs/: fastwam_sample_contract.md
fixtures/: fastwam_minimal_sample.json
results/agx_real_text/: README.md  eager_real_text_latency.json  partitioned_trt_drift_real_text.json  partitioned_trt_real_text_latency.json
results/dgx_spark_real_text/: README.md  eager_real_text_latency.json  partitioned_trt_drift_real_text.json  partitioned_trt_real_text_latency.json
scripts/: benchmark_fastwam.py  benchmark_trt_partitioned_runtime.py  benchmark_trt_vae_image_encoder.py  benchmark_trt_video_prefill.py  build_fastwam_summary_figures.py  build_trt_engine_python.py  check_fastwam_assets.py  check_minimal_fixture.py  compare_partitioned_trt_drift.py  download_fastwam_assets.py  export_action_step_dynamic_kv_onnx.py  export_vae_image_encoder_onnx.py  export_video_prefill_onnx.py  fastwam_agx_env.sh  fix_onnx_double_initializers.py  prepare_robotwin_unified_sample.py  run_dgx_spark_real_text_benchmark.sh  run_robotwin_text_benchmark.sh
src/tinyaction_fastwam/: __init__.py  onnx_patches.py  paths.py  presets.py  runtime.py  sample_adapter.py  text_cache.py
